Change: Correct name case in some autogen scripts

--- a/source/OpenBVE/Properties/AssemblyInfo.tt
+++ b/source/OpenBVE/Properties/AssemblyInfo.tt
@@ -52,9 +52,9 @@ using System.Reflection;
 using System.Runtime.CompilerServices;
 using System.Runtime.InteropServices;
 
-[assembly: AssemblyTitle("openBVE")]
-[assembly: AssemblyProduct("openBVE")]
-[assembly: AssemblyCopyright("The openBVE Project")]
+[assembly: AssemblyTitle("OpenBVE")]
+[assembly: AssemblyProduct("OpenBVE")]
+[assembly: AssemblyCopyright("The OpenBVE Project")]
 [assembly: ComVisible(false)]
 [assembly: AssemblyVersion("<#= version #>")]
 [assembly: AssemblyInformationalVersion("<#= infoVersion #>")]
